LFLT-655 Migrate Java applications to Spring Boot v4  - Aligned Jackson imports and configuration  - Eliminated deprecated calls  - Switched to stack base BOM v6.0-r2604.3  - Bumped application version to 2.5.0-dev  - POM fixes (annotation processing and Mockito warnings)  - Added OAuth application descriptor and import step in pipeline  - Added deploy markers to CircleCI config